# Cinderous

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PRD.md  README.en.md  README.md  gemini.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: CONTRIBUTING.en.md  CONTRIBUTING.md
.github/workflows/: ci.yml  pages.yml  relay-health.yml  threat-intel.yml
apps/cli/: build.mjs  package.json  tsconfig.json
apps/cli/src/: args.test.ts  args.ts  main.ts  serve.test.ts  serve.ts
apps/desktop/: Caddyfile  Dockerfile  demo.html  index.html  package.json  tsconfig.json  vite.config.ts  webrtc.html  wrangler.jsonc
apps/desktop/public/: _headers
apps/desktop/src/: App.test.tsx  App.tsx  FriendList.tsx  accent.test.ts  accent.tsx  bootstrap-config.ts  globals.d.ts  i18n.tsx  identity-scoped.test.ts  identity-scoped.ts  layout.tsx  main.tsx  nsec.ts  presence-store.test.ts  presence-store.ts  qr.test.ts  qr.ts  releases.test.ts  releases.ts  site.ts  stickers.test.ts  stickers.ts  tauri-csp.test.ts  threat-db.test.ts  threat-db.ts  titlebar.test.tsx  titlebar.tsx  update-check.test.ts  update-check.ts  version.test.ts  version.ts
apps/desktop/src-tauri/: Cargo.toml  README.md  build.rs  installer-hooks.nsh  tauri.conf.json  wix-uninstall-wipe.wxs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: aikey.rs  encstore.rs  ipc.rs  keyvault.rs  lib.rs  main.rs  net.rs  partfile.rs  passlock.rs  reconnect.rs  session.rs  storage.rs
apps/desktop/src-tauri/tests/: net_integration.rs
apps/desktop/src/backend/: browser-backend.test.ts  browser-backend.ts  pairing-session.test.ts  pairing-session.ts  pairing-transport.test.ts  pairing-transport.ts  relay-backend.test.ts  relay-backend.ts  relay-bootstrap.test.ts  relay-pool.test.ts  rtc-config.test.ts  rtc-config.ts  types.ts  webrtc-call.ts  webrtc.ts
apps/desktop/src/demo/: main.ts  webrtc.ts
apps/desktop/src/native/: browser-identity.test.ts  browser-store.test.ts  browser-store.ts  clipboard.test.ts  clipboard.ts  keyvault.test.ts  keyvault.ts  notify.test.ts  notify.ts  ollama.test.ts  ollama.ts  passlock.test.ts  passlock.ts  save-file.test.ts  save-file.ts  slot-store.ts  tauri-archive.ts  tauri-storage.test.ts  tauri-storage.ts  wipe.test.ts  wipe.ts
apps/desktop/src/storage/: cloud-snapshot.test.ts  cloud-snapshot.ts  device-id.ts  local.ts  memory.test.ts  memory.ts  pair-bundle.test.ts  pair-bundle.ts  profiles.test.ts  profiles.ts  types.ts
apps/mobile/: index.html  package.json  vite.config.ts
apps/mobile/src/: MobileApp.test.tsx  MobileApp.tsx  auth-security.test.ts  auth.test.ts  auth.ts  backend.test.ts  backend.ts  chat-list.test.ts  chat-list.ts  chat.test.ts  chat.ts  identities.test.ts  identities.ts  note-store.test.ts  note-store.ts  org-escrow.test.ts  org-escrow.ts  personalize.test.ts  personalize.ts  presence.test.ts  presence.ts  preview.tsx  react-native-web.d.ts
apps/website/: README.md  index.html  package.json  vite.config.ts
apps/website/scripts/: og-image.mjs  prerender.mjs  sign-funds.ts
apps/website/src/: App.tsx  Brand.tsx  FlowDiagram.tsx  MultiNodeDiagram.tsx  copy.ts  entry-server.tsx  funds.test.ts  funds.ts  icons.tsx  main.tsx  prerender.test.ts  routes.test.ts  routes.ts  seo.test.ts  seo.ts  styles.css
claude/: 01_前置檢查清單_Preflight-Checklist.md  03_搜尋優先與架構定位_SearchFirst_Architecture.md  05_檔案與目錄規範_Repo_Structure.md
docs/: MAINTAINER-ACTIVATION.en.md  MAINTAINER-ACTIVATION.md  NODE-SUBMISSION.en.md  NODE-SUBMISSION.md  OPERATOR-TODO.md  PENDING-ADR-WORK.md  ROADMAP.md  SECURITY.en.md  SECURITY.md  SELF-HOSTING.en.md  SELF-HOSTING.md  User-Guide.en.md  relay-metadata-observability.md  releases.json  self-hosting-raspberry-pi.en.md  self-hosting-raspberry-pi.md  self-hosting-web-app.en.md  self-hosting-web-app.md  self-hosting-zeabur.en.md  self-hosting-zeabur.md  threat-intel.json  使用手冊_User-Guide.md  前端開發指南_Frontend-Guide.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-privacy-metadata-and-protocol-baseline.md  0006-heartbeat-capacity-and-free-tier.md  0008-webrtc-signaling-and-datachannel-protocol.md  0009-multidevice-sync.md  0010-line-inspired-feature-roadmap.md  0012-message-unsend.md  0013-disappearing-messages.md  0014-contact-management.md  0015-settings-identity-backup-notifications.md  0016-relay-reconnect-and-connection-status.md  0018-tauri-desktop-shell.md  0019-background-relay-connection.md  0020-native-persistence-sqlite-sqlcipher.md  0021-stickers.md  0022-voice-messages.md  0023-media-album.md  0024-qr-add-friend.md  0027-group-encryption.md  0028-forward-secrecy.md  0029-datachannel-binary-framing.md  0030-presence-ux-idle-away-and-status-formatting.md  0032-custom-stickers.md  0033-sticker-editor.md  0034-multi-relay-routing.md  0036-relay-hint-staleness.md  0037-sticker-text-triggers.md  0038-url-hygiene.md  0039-hybrid-bootstrap-routing.md  0040-group-local-labels.md  0041-outbox-paced-delivery.md  0042-custom-sticker-limits.md  0043-animated-sticker-norms.md  0044-enterprise-closed-relay.md  0045-multi-identity-profiles.md  0046-enterprise-membership-and-boundary.md  0047-enterprise-provisioning-roster.md  0048-enterprise-policy-and-turn.md  0049-org-groups-and-announcements.md  (+171 more)
docs/research/: discord-slack-features.md  embedding-as-communication-feature.md
relay/: Dockerfile  package.json  tsconfig.bootstrap.json  tsconfig.json  wrangler.relay2.toml  wrangler.toml
relay/bootstrap/: conformance.test.ts  conformance.ts  genkey.ts  health-check.ts  health-history.json  relays.json
relay/src/: dev-server.ts  filters.ts  host-config.test.ts  host-config.ts  in-memory-network.ts  index.ts  integration.test.ts  message-store.test.ts  message-store.ts  node-relay.ts  protocol.test.ts  protocol.ts  relay-core.test.ts  relay-core.ts  shard.test.ts  shard.ts  sql-message-store.test.ts  sql-message-store.ts  worker.test.ts  worker.ts
scripts/: release-notes.mjs  threat-snapshot.mjs
(+143 files in other folders)
