[package]
name = "nostr-buddy-desktop"
version = "0.0.0"
edition = "2021"
publish = false
description = "Nostr Buddy 桌面原生橋（Rust）：relay 連線、重連、金鑰儲存、IPC"

# 這個 crate 同時是：
#  1) 一個「與平台無關、可單元測試」的 lib（重連退避、IPC 資料契約）；
#  2) 一個 Tauri 桌面二進位（`tauri-app` feature），包住 apps/desktop 前端。
#
# 預設（不開 feature）只編譯與測試 lib，不需 Tauri 工具鏈。完整二進位需在
# 具 Tauri 工具鏈與系統庫（webkit2gtk 等）的環境以 `--features tauri-app` 建置。
[lib]
name = "nostr_buddy_desktop"
path = "src/lib.rs"

[[bin]]
name = "nostr-buddy-desktop"
path = "src/main.rs"
required-features = ["tauri-app"]

[features]
# 完整 Tauri 桌面二進位（需 Tauri 工具鏈與 webkit2gtk 等系統庫）。
tauri-app = ["dep:tauri", "dep:tokio", "dep:tauri-build"]
# 背景 WebSocket 連線執行期（tokio + tungstenite）。可獨立於 GUI 建置/測試，
# 但拉入 async I/O 相依，故預設關閉以維持精簡的 `cargo test`。
net = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
# 原生持久化（bundled SQLite，供開發/測試）。以 `PRAGMA key` 支援加密；正式版
# 改用 `sqlcipher` feature（整庫 SQLCipher 加密）。兩者互斥，勿同時啟用。
persistence = ["dep:rusqlite", "rusqlite/bundled"]
sqlcipher = ["dep:rusqlite", "rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
rusqlite = { version = "0.32", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true }
