[package]
name = "cinder-desktop"
version = "0.0.0"
edition = "2021"
publish = false
description = "Cinder 桌面原生橋（Rust）：relay 連線、重連、金鑰儲存、IPC"

# 這個 crate 同時是：
#  1) 一個「與平台無關、可單元測試」的 lib（重連退避、IPC 資料契約）；
#  2) 一個 Tauri 桌面二進位（`tauri-app` feature），包住 apps/desktop 前端。
#
# 預設（不開 feature）只編譯與測試 lib，不需 Tauri 工具鏈。完整二進位需在
# 具 Tauri 工具鏈與系統庫（webkit2gtk 等）的環境以 `--features tauri-app` 建置。
[lib]
name = "cinder_desktop"
path = "src/lib.rs"

[[bin]]
name = "cinder-desktop"
path = "src/main.rs"
required-features = ["tauri-app"]

[features]
# 完整 Tauri 桌面二進位（需 Tauri 工具鏈與 webkit2gtk 等系統庫）。
tauri-app = ["dep:tauri", "dep:tokio", "dep:tauri-build", "dep:reqwest", "keyring", "encstore"]
# OS 金鑰庫（B5，ADR-0053）：私鑰託管於作業系統安全儲存。可獨立測試（會存取真實金鑰庫）。
keyring = ["dep:keyring"]
# 加密儲存 blob（B2 儲存基質，ADR-0054）：AES-256-GCM（純 Rust，免 OpenSSL/Perl）。純函式可測。
encstore = ["dep:aes-gcm", "dep:base64"]
# 背景 WebSocket 連線執行期（tokio + tungstenite）。可獨立於 GUI 建置/測試，
# 但拉入 async I/O 相依，故預設關閉以維持精簡的 `cargo test`。
net = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
# 原生持久化（bundled SQLite，供開發/測試）。以 `PRAGMA key` 支援加密；正式版
# 改用 `sqlcipher` feature（整庫 SQLCipher 加密）。兩者互斥，勿同時啟用。
persistence = ["dep:rusqlite", "rusqlite/bundled"]
sqlcipher = ["dep:rusqlite", "rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", optional = true, features = ["tray-icon"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
rusqlite = { version = "0.32", optional = true }
keyring = { version = "3", optional = true, features = ["windows-native", "apple-native", "sync-secret-service"] }
aes-gcm = { version = "0.10", optional = true, features = ["getrandom"] }
base64 = { version = "0.22", optional = true }
# 本機 Ollama HTTP 客戶端（AI 改寫，ADR-0060）；rustls 免 OpenSSL/Perl（比照 encstore）。
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true , features = [] }
