[package]
name = "cinder-desktop"
version = "0.0.0"
edition = "2021"
publish = false
description = "Cinder 桌面原生橋（Rust）：relay 連線、重連、金鑰儲存、IPC"

# 這個 crate 同時是：
#  1) 一個「與平台無關、可單元測試」的 lib（重連退避、IPC 資料契約）；
#  2) 一個 Tauri 桌面二進位（`tauri-app` feature），包住 apps/desktop 前端。
#
# 預設（不開 feature）只編譯與測試 lib，不需 Tauri 工具鏈。完整二進位需在
# 具 Tauri 工具鏈與系統庫（webkit2gtk 等）的環境以 `--features tauri-app` 建置。
[lib]
name = "cinder_desktop"
path = "src/lib.rs"

[[bin]]
name = "cinder-desktop"
path = "src/main.rs"
required-features = ["tauri-app"]

[features]
# 預設：出貨的純密碼學模組（ADR-0105）。
# 過去 default 是空的 → `cargo test` 只測到 ipc/session/reconnect 這些**死碼**，
# 而真正出貨的 encstore/passlock **一次都沒被編譯、沒被測過**。現在把它們設為預設，
# CI 的 `cargo test` 才是在測會出貨的東西。
default = ["passlock"] # passlock 已含 encstore

# 完整 Tauri 桌面二進位（需 Tauri 工具鏈與 webkit2gtk 等系統庫）。
tauri-app = ["dep:tauri", "dep:tauri-plugin-notification", "dep:tauri-build", "dep:reqwest", "dep:rfd", "keyring", "encstore", "passlock"]
# OS 金鑰庫（B5，ADR-0053）：私鑰託管於作業系統安全儲存。
# **不放進 default**：其測試會存取真實 OS 金鑰庫，在 CI 容器裡不可用。
keyring = ["dep:keyring"]
# 加密儲存 blob（B2 儲存基質，ADR-0054）：AES-256-GCM（純 Rust，免 OpenSSL/Perl）。純函式可測。
encstore = ["dep:aes-gcm", "dep:base64"]
# 本地密碼（H4，ADR-0067）＋忘記密碼救援（ADR-0073）：Argon2id KEK 包裹 nsec＋db 金鑰；
# db 金鑰另以 nsec 衍生金鑰（sha2 域分隔）雙重包裹供救援。AEAD 重用 encstore。純函式可測。
passlock = ["dep:argon2", "dep:sha2", "encstore"]

[dependencies]
serde = { version = "1", features = ["derive"] } # passlock::Blob 用 derive 序列化
serde_json = "1"
tauri = { version = "2", optional = true, features = ["tray-icon"] }
# 桌面原生通知（ADR-0076）：可靠系統 toast＋點擊 action，取代打包後不穩的 webview Notification。
tauri-plugin-notification = { version = "2", optional = true }
keyring = { version = "3", optional = true, features = ["windows-native", "apple-native", "sync-secret-service"] }
aes-gcm = { version = "0.10", optional = true, features = ["getrandom"] }
base64 = { version = "0.22", optional = true }
# 密碼雜湊/KDF（ADR-0067）：Argon2id，記憶體硬、抗 GPU 暴力。
argon2 = { version = "0.5", optional = true, default-features = false, features = ["alloc"] }
# nsec 救援金鑰的域分隔雜湊（ADR-0073）；nsec 高熵故用快雜湊即可。
sha2 = { version = "0.10", optional = true, default-features = false }
# 本機 Ollama HTTP 客戶端（AI 改寫，ADR-0060）；rustls 免 OpenSSL/Perl（比照 encstore）。
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
# 收檔另存的原生「另存新檔」對話框（ADR-0093）；自帶原生對話框、不需 Tauri ACL。
rfd = { version = "0.15", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true , features = [] }
